@@ -71,9 +71,7 @@ MainWidget::MainWidget(QWidget *parent)
   //
   // Window Title Bar
   //
-  setWindowTitle(tr("RDLogEdit Remote")+" v"+PACKAGE_VERSION+
-		 " [Host: "+cnf->serverHostname()+
-		 ",User: "+cnf->serverUsername()+"]");
+  connect(cnf,SIGNAL(serverLoginUpdated()),this,SLOT(serverLoginUpdatedData()));
   setWindowIcon(QPixmap(rdlogeditb_16x16_xpm));
 
   //
@@ -187,6 +185,14 @@ MainWidget::MainWidget(QWidget *parent)
 QSize MainWidget::sizeHint() const
 {
   return QSize(800,600);
+}
+
+
+void MainWidget::serverLoginUpdatedData()
+{
+  setWindowTitle(tr("RDLogEdit Remote")+" v"+PACKAGE_VERSION+
+		 " [Host: "+cnf->serverHostname()+
+		 ",User: "+cnf->serverUsername()+"]");
 }
 
 
